--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NITCeMagazine</string>
+    <string name="app_name">MAGe</string>
     <string name="nitc_mag_e">NITC MAG-E</string>
     <string name="educational">Educational</string>
     <string name="fest">fest</string>
